--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,275 @@
-*, *::before, *::after {
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/* Remove default padding */
+ul[class],
+ol[class] {
     padding: 0;
 }
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+    margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a class attribute */
+ul[class],
+ol[class] {
+    list-style: none;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+    text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img {
+    max-width: 100%;
+    display: block;
+}
+
+/* Natural flow and rhythm in articles by default */
+article > * + * {
+    margin-top: 1em;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+    font: inherit;
+}
+
+/* Default properties to Span textbox */
+span[role=textbox] {
+    white-space: pre-wrap;
+    overflow: hidden;
+    word-break: break-word;
+}
+
+span[role=textbox] {
+  width: 100%;
+  max-width: 65ch;
+}
+
+
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+    }
+}
+
+/* readability length */
+p {
+    max-width: 65ch;
+}
+
+/* click through icons */
+i {
+    pointer-events: none;
+}
+
+:root {
+      /* Font Family variables */
+      --ff-primary: 'Montserrat', sans-serif;
+      --ff-mono: 'Azeret Mono', monospace;
+      --ff-serif: 'Bitter', serif;
+
+      --txt-color: hsl(0deg 0% 90%);
+      --bg-color: hsl(0deg 0% 10%);
+}
+
 body {
-    background: hsl(0deg 0% 10%);
-    color: hsl(0deg 0% 90%);
+    background: var(--bg-color);
+    color: var(--txt-color);
     height: 600px;
     width: 450px;
-    
+    font-family: var(--ff-primary);
+    line-height: 1.5;
+}
+
+header {
+  height: 5vh;
+  max-height: 5vh;
+}
+
+nav {
+  height: 100%;
+}
+nav ul {
+  display: grid;
+  height: 100%;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  list-style: none;
+  padding: .25rem .25rem 1rem .25rem;
+}
+li {
+  height: 100%;
+}
+li button {
+  color: hsl(0deg 0% 90%);
+  background: hsl(0deg 0% 10%);
+  border-image-slice: 1;
+  border-width: 3px;
+  border-color: transparent;
+  height: 100%;
+  width: 100%;
+}
+li button:hover {
+  background-color: hsl(0deg 0% 100% / .1);
+  cursor: pointer;
+}
+.active {
+  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
+}
+button {
+  transition: background-color 350ms ease-in-out;
+}
+
+
+/* Form Styles
+-------------------------------------------------- */
+#form-container {
+  height: 100vh;
+  display: grid;
+  place-content: center;
+}
+
+#form-container:not(.show) {
+  display: none;
+}
+
+#usernameForm {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+#usernameForm h1 {
+  text-align: center;
+}
+
+#usernameForm input[type=text] {
+  border: none;
+  color: var(--txt-color);
+  background-color: hsl(0deg 0% 20% / .5);
+  font-size: 1.25rem;
+  padding: .25rem .5rem;
+}
+
+#usernameForm input[type=submit] {
+  font-weight: 700;
+  padding: .5rem 2.1rem;
+  font-size: 1rem;
+}
+
+
+/* Notes Styles
+-------------------------------------------------- */
+
+#notes-container {
+  height: 95vh;
+}
+
+#notes-container:not(.show) {
+  display: none;
+}
+
+.notes {
+  display: flex;
+  flex-direction: column;
+  padding: 1.25rem .85rem;
+  gap: 1.25rem;
+  height: 100%;
+  margin-block: 1rem;
+}
+
+.note {
+  border-style: solid;
+  border-width: 2px;
+  width: 100%;
+  max-width: 70ch;
+  margin-inline: auto;
+}
+.note-title {
+  padding: .75rem;
+  text-align: center;
+  font-weight: 700;
+  color: #fafafa;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 1px hsl(0deg 0% 10% / .5);
+}
+
+.note-body-container {
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  grid-template-areas: "body icons";
+  padding: .65rem;
+}
+
+[readonly],
+[contentEditable = false] {
+  border: none;
+  outline: none;
+  cursor: default;
+}
+.icons {
+  grid-area: icons;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: repeat(3, 1fr);
+  place-items: center;
+  padding-left: 0.5rem;
+}
+
+.delete,
+.edit,
+.save {
+  display: none;
+  padding: .5rem;
+}
+.edit.active {
+  color: hsl(120, 75%, 50%);
+}
+
+span[role=textbox] {
+  padding: .25rem .5rem;
+  min-height: 12ch;
+}
+
+span[role=textbox][contentEditable = true] {
+  padding: calc(.25rem - 1px) calc(.5rem - 1px);
+  border: 1px inset hsl(0deg 0% 80% / .5);
+}
+
+header:not(.show) {
+  display: none;
 }
 
 
@@ -15,7 +277,11 @@ body {
 -------------------------------------------------- */
 
 #calendar-container {
-    height: 100vh;
+  height: 95vh;
+}
+
+#calendar-container:not(.show) {
+  display: none;
 }
 
 .fc-header-toolbar {
@@ -41,7 +307,6 @@ body {
     --fc-small-font-size: .75rem;
  }
 
-
 /*********************************************************************
                             SCROLL BAR STYLE       
 ********************************************************************/
@@ -63,4 +328,9 @@ body {
   ::-webkit-scrollbar-corner {
     background: hsl(0deg 0% 10%);
   }
+
   
+  .show {
+    display: block;
+  }
+
